workout-info margin alignment - fixed

--- a/src/ui/screens/workout-page/workoutInfo/workout-info.scss
+++ b/src/ui/screens/workout-page/workoutInfo/workout-info.scss
@@ -5,7 +5,6 @@
     
     .content{
         color: $light;
-        font-weight: bold;
         font-size: 30px;
     }
     .subtitle{
